# geant4-bremsstrahlung

./: CMakeLists.txt  TestSpectra.txt  main.cc  run.mac
include/: RunAct.hh
mesh/: mesh02.txt
res/: Deposited Energy from Thread Number 0.txt  Deposited Energy from Thread Number 1.txt  Deposited Energy from Thread Number 2.txt  Deposited Energy from Thread Number 3.txt
src/: ActionInit.cc  DetGeometry.cc  EventAct.cc  PrimaryGen.cc  RunAct.cc  StepAct.cc
